testing/framework/resources/Advanced/Failing/mondrian/query6083.q
select count(distinct line_class_id) from line_class;
